Fix whitespace

--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -210,6 +210,7 @@
       display: inline-block;
       font-weight: 700;
       margin: 0;
+      margin-right: 0.4rem;
     }
     > span {
       display: inline-block;
